Changelog for Yii User Management Module since Version 0.3

New in 0.4:

- One can use User::hasRole(array('role1', 'role2')) to check if the User
  belongs to role1 OR role 2

- Rearranged Menu Items more logical